--- a/style.css
+++ b/style.css
@@ -3,32 +3,56 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-header {
-    background-color: #E6E6FA;
-    padding: 20px;
-    text-align: center;
-}
+    text-decoration: none;
 
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #2cd4d9;
+    background-color:  #E6E6FA;
 }
+}
+
+header {
+    
+    background-color:  #2cd4d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+    
+    /* background-image: url(./imagens/Infinity-School-Logo.png);
+    background-repeat: no-repeat;background-position: center;
+    background-size: 100% auto;
+    padding: 200px; */
+
+}
+
+header img {
+    width: 180px;
+    display: flex;
+    justify-content: start;
+}
+
+header h1, h2 {
+    color: red;
+    
+}
+
 
 .container {
     display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: stretch;
+  margin-top: 200px;
 }
 
 .card {
     width: 300px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.51);
-    border-radius: 10px;
+    border-radius: 20px;
     overflow: hidden;
 }
 
@@ -52,53 +76,78 @@ body {
 
 .card-content p {
     margin-top: 10px;
-    color: #666;
+    margin-bottom: 10px;
+    color: #0f0101;
 }
 
+.card-content .valor {
+    display: block;
+    color: rgb(0, 0, 0);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
+}
+
+
+
 .btn {
-    display: inline-block;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #007bff;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 20px; 
 }
 
 
-
-form {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    padding: 10px;
-   
-}
-
-form label {
-    margin-bottom: 5px;
+button:hover {
+    border: 1px solid #ffc506;
+    background-color: transparent;
+    color: #ffc506;
 }
 
 .formulario {
+    
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
+    
+    color:  black;
+    font-size: 1.8rem;
+    margin-top: 200px;
+    margin-bottom: 40px;
+    
+}  
 
-form button {
-    padding: 10px 20px;
+.formulario button {
+    padding: 5px 20px;
     background-color: #007bff;
     color: white;
     border: none;
     cursor: pointer;
+    margin-bottom: 5px;
+}
+
+.formulario button:hover {
+    border: 1px solid #ffc506;
+    background-color: transparent;
+    color: #ffc506;
+}
+
+form input {
+    width: 800px;
 }
 
 footer {
-    background-color: #E6E6FA;
+    background-color: #2cd4d9;
     display: flex;
     justify-content: center;
+}
+
+footer p {
+    color: #E6E6FA;
 }
