--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset */
 * {
     margin: 0;
     padding: 0;
@@ -19,12 +18,6 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
-    
-    /* background-image: url(./imagens/Infinity-School-Logo.png);
-    background-repeat: no-repeat;background-position: center;
-    background-size: 100% auto;
-    padding: 200px; */
 
 }
 
@@ -87,6 +80,33 @@ header h1, h2 {
     
 }
 
+.promotion-clock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 160px;
+    margin-bottom: 50px;
+    padding: 10px;
+}
+
+.promotion-clock label {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 15px;
+}
+
+.promotion-clock input {
+    width: 250px;
+    font-size: 20px;
+}
+ .promotion-clock h2 {
+    font-size: 40px;
+ }
+ 
+.card .card-content h2 {
+    color: red;
+    font-size: 22px;
+}
 
 
 .btn {
@@ -139,7 +159,7 @@ button:hover {
 }
 
 form input {
-    width: 800px;
+    width: 600px;
 }
 
 footer {
@@ -151,3 +171,13 @@ footer {
 footer p {
     color: #E6E6FA;
 }
+
+.relogio {
+    color: #ffc506;
+    font-size: 300px;
+}
+
+script {
+    color: #ffc506;
+}
+
